tests/invalid_options_file/no_assign.options_file
# Replace = with >.
MCFLAGS-global > --no-warn-nothing-exported --no-warn-interface-imports
